tests/cases/control-flow/ok/control-flow-if-else-if.ari
fn main() -> i64 {
  let value = 7;
  if value < 3 {
    return 1;
  } else if value < 7 {
    return 2;
  } else if value == 7 {
    return 3;
  } else {
    return 4;
  }
}
